# metabase_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  metabase-api.json  nginx.conf  pyproject.toml  requirements.txt
agents/: anthropic_agent.py  ask.py  dashboard_agent.py  py_dantic_agent.py  sql_generation.py
constants/: api_constants.py  dashboard_prompt.py  metabase_constants.py  metabase_request_schemas.py  metabase_schemas.py  prompt.py  sample_queries.py
data/: Spreadsheet 1.csv  cards_output.json  new_json.json  report_card.csv  report_card_backup.csv  sample_agent_request.json  sample_dashboard_request.json
docs/: agent.md  dashboard-agent.md
metabase_agent/: asgi.py  settings.py  urls.py  wsgi.py
metabase_agent_helper/: admin.py  apps.py  models.py
metabase_agent_helper/migrations/: 0002_alter_messageshistory_messages_json.py
metabase_agent_main/: admin.py  apps.py
metabase_agent_main/migrations/: 0001_initial.py  (+1 more)
metabase_analyzer_helper/: apps.py
metabase_helpers/: asgi.py  settings.py  urls.py  wsgi.py
metabase_metrics_helper/: apps.py
metabase_sql_helper/: apps.py
notebooks/: clean_chat_schema.ipynb
serializers/: baseSerializer.py
tools/: chart_tools.py  schema_tools.py  sql_fixing_tools.py  user_helper_tools.py
urls/: api_v1.py  api_v2.py
utils/: chart_validators.py  image_ai_completion.py  image_utils.py  logging.py  message_history.py  metabase_api.py  model_provider.py  py_dantic_agent.py  sql_fix.py
views/v1/: analyzer.py  anthropic.py  (+3 more)
(+2 files in other folders)
