[project]
name = "metabase-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=25.1.0",
    "cairosvg>=2.8.2",
    "daphne>=4.2.1",
    "django>=4.2.30",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-ai>=0.8.1",
    "python-dotenv>=1.2.1",
    "python-magic>=0.4.27",
    "pyvips>=3.1.1",
    "uvicorn>=0.39.0",
]
